--- a/TotrisEngine/TotrisEngine.vcxproj.filters
+++ b/TotrisEngine/TotrisEngine.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Core\Engine\Piece.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Core\Engine\Util\Tetromino.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\Dependencies\pch.h">
